# brain-eval

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml.example
.github/workflows/: ci.yml
baselines/: recall_quality.txt
docs/: RUNNING_EVALS.md  V1_ACCEPTANCE_PLAN.md  eval-and-system-test-plan.md
examples/: run_longmemeval.rs  validate_pipeline.rs
scripts/: download_longmemeval.sh  fetch-datasets.sh  membership_recall.py
src/: acceptance.rs  lib.rs  llm.rs  soak.rs
src/core/: benchmark.rs  instance.rs  mod.rs  outcome.rs
src/datasets/: dmr.rs  lexical_stress.rs  locomo.rs  longmemeval.rs  mod.rs  paraphrase_stress.rs  smoke.rs  supersession_stress.rs
src/report/: baselines.rs  mod.rs  shape.rs
src/report/format/: json.rs  mod.rs  text.rs
src/run/: config.rs  harness.rs  metrics.rs  mod.rs  runner.rs  server.rs  synthesize.rs
src/scale/: mod.rs  recall.rs  targets.rs  throughput.rs
src/score/: context_recall.rs  judge.rs  judge_prompt.rs  latency.rs  llm_judge.rs  metrics.rs  mod.rs  retrieval.rs
src/system/: chaos.rs  durability.rs  invariants.rs  mod.rs  storage.rs
src/system/typed_graph/: entity.rs  extraction.rs  mod.rs  query.rs  relation.rs  schema.rs  statement.rs
src/testing/: fixtures.rs  mod.rs  scripted_llm.rs
tests/: basic_e2e.rs  chaos_live.rs  durability.rs  invariants_live.rs  longmemeval_loader.rs  membership_invariants.rs  regression_live.rs  runner_e2e.rs  scale_smoke.rs  server_boot.rs  soak_live.rs  storage_live.rs  system_scenarios.rs  throughput_live.rs  typed_graph_live.rs
tests/fixtures/: longmemeval_smoke.json
