[package]
name = "brain-eval"
version = "1.0.0"
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/brain-db-io/brain-eval"
description = "Evaluation, benchmarking, and report generation for Brain — the cognitive substrate for AI agents."

[features]
default = []
# Enables LLM-as-judge evaluation. Off by default — real LLM calls
# cost money and require live API keys. Build/run with `--features
# live-llm` and an `ANTHROPIC_API_KEY` (or `OPENAI_API_KEY`) to opt in;
# the runner falls back to the heuristic judge when the feature is off or
# no key is set. Pulls in `reqwest` (the only HTTP dependency, gated here).
live-llm = ["dep:reqwest"]

# ----------------------------------------------------------------------------
# Dependency on the SDK — and ONLY the SDK.
#
# brain-eval is a black-box client: it drives a running brain-server purely
# over the wire through the published Rust SDK, never the substrate's
# internal crates. Wire types it needs (MemoryResult, MemoryKindWire, the
# id aliases) are re-exported from `brain_db_sdk::wire`. This keeps the
# eval rig decoupled from substrate internals — the whole point of the
# repo split.
#
# We depend on the PUBLISHED crate (`brain-db-sdk = "0.1"`); the
# `[patch.crates-io]` at the bottom redirects to the sibling `brain-sdk`
# checkout for local co-development, so this repo builds standalone (from
# crates.io, once published) and in the side-by-side layout (from the
# path) without edits. Same pattern brain-shell uses.
# ----------------------------------------------------------------------------

[dependencies]
brain-db-sdk = "0.1"

tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "time", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.7", features = ["v7", "serde"] }
thiserror = "1"
tracing = "0.1"

# LLM-as-judge HTTP client. Optional — only compiled under `live-llm`.
# rustls (no system OpenSSL); `json` for request/response bodies.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

# Local co-development override: build against the sibling SDK checkout
# instead of the crates.io release. Remove (or comment out) to force a
# pure crates.io build, e.g. when validating the published package.
[patch.crates-io]
brain-db-sdk = { path = "../brain-sdk/rust" }
